[gd_scene load_steps=4 format=3 uid="uid://cbwfgw58pio1k"]

[ext_resource type="Script" uid="uid://cp61wime0de1j" path="res://ui/scene_finish.gd" id="1_1y3d1"]
[ext_resource type="Texture2D" uid="uid://cph5b5acu6pgj" path="res://assets/interfaces/botones/BP-Reintentar-NoPulsado.png" id="2_7jy23"]
[ext_resource type="Texture2D" uid="uid://bmvuewbymeops" path="res://assets/interfaces/botones/BP-Reintentar-Pulsado.png" id="3_oagm5"]

[node name="SceneFinish" type="CanvasLayer"]
script = ExtResource("1_1y3d1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0, 0.121569, 0.231373)

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 2
offset_left = 457.0
offset_top = 387.0
offset_right = 721.0
offset_bottom = 411.0
scale = Vector2(0.942211, 1.35186)
text = "Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -39.0
offset_right = 132.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "TITULO"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_7jy23")
texture_pressed = ExtResource("3_oagm5")

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="ColorRect/VBoxContainer/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="pressed" from="ColorRect/VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
